Added Paggination, Routing, Login/Logout state.

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@ body {
   box-sizing: border-box;
   padding: 0;
 }
+a{
+  text-decoration: none;
+  color: inherit;
+}
 h1{
   font-family: 'Playfair Display', serif;
   font-size: 3rem;
@@ -33,14 +37,23 @@ code {
   justify-content: space-between;
   align-items: center;
   min-width: 1070px;
+  position: sticky;
+  background: white;
+  z-index: 10;
 }
 .header-container{
+  background: white;
+  top: 0;
+  width: 100%;
   height: 95px;
   display: flex;
   justify-content: center;
   align-items: center;
   border-bottom: #EBEBEB 1px solid;
+  position: sticky;
+  z-index: 10;
 }
+
 .logIn{
   font-family: 'IBM Plex Sans', sans-serif;
   width: 113px;
@@ -52,6 +65,7 @@ code {
   border: none;
   margin-left: 24px;
 }
+
 .signIn{
   font-family: 'IBM Plex Sans', sans-serif;
   width: 113px;
@@ -203,4 +217,65 @@ footer{
   width: 1070px;
   display: flex;
   margin: 40px 0px;
+  cursor: pointer;
+  filter: invert(4%);
+}
+.articles:hover{
+  filter: invert(0%);
+}
+.articles:active{
+  position: relative;
+  top: -2px;
+}
+.logIn-nav{
+  list-style: none;
+  display: flex;
+  align-items: center;
+}
+.logIn-nav li{
+  position: relative;
+  top: 6px;
+  display: inline-block;
+  margin: 0px 20px;
+  padding-bottom: 10px;
+  color: #8C8C8C;
+  cursor: pointer;
+}
+.logIn-menu{
+  display: flex;
+}
+
+.active{
+  border-bottom: 1px solid black;
+}
+.active a{
+  color: black;
+}
+.logInFooter{
+  font-family: 'IBM Plex Sans', sans-serif;
+  width: 113px;
+  font-size: 16px;
+  height: 47px;
+  cursor: pointer;
+  background: black;
+  color: white;
+  border: 1px white solid;
+  margin-left: 24px;
+}
+.ml-44{
+  margin-left: 44px;
+}
+.mr-84{
+  margin-right: 75px;
+  margin-left: 0px;
+}
+.mr-top-bottom-80{
+  margin: 80px 0px;
+}
+.fullPage-container{
+  width: 883px;
+  border: 1px solid black;
+}
+.fullPage{
+  width: 676px;
 }
