--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -10,7 +10,7 @@
 }
 
 .footer_nav{
-    max-width: 1070px;
+    min-width: 1070px;
     display: flex;
     justify-content: space-between;
     padding: 72px 0px;
