--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
   padding: 0;
 }
-* {
+ul{
+  padding: 0;
+  margin: 0;
+}
+*{
   box-sizing: border-box;
 }
 a{
