--- a/src/index.css
+++ b/src/index.css
@@ -139,12 +139,12 @@ code {
 /*!*.avatarBlock span{*!*/
 /*!*  font-weight: 500;*!*/
 /*!*}*!*/
-/*!*.main-container{*!*/
-/*!*  margin: 80px 0px;*!*/
-/*!*  display: flex;*!*/
-/*!*  align-items: center;*!*/
-/*!*  flex-direction: column;*!*/
-/*!*}*!*/
+/*.main-container{*/
+/*  margin: 80px 0px;*/
+/*  display: flex;*/
+/*  align-items: center;*/
+/*  flex-direction: column;*/
+/*}*/
 /*!*.main-content{*!*/
 /*!*  max-width: 1070px;*!*/
 /*!*}*!*/
