--- a/src/components/FullArticlePages/FullArticlePage.module.css
+++ b/src/components/FullArticlePages/FullArticlePage.module.css
@@ -2,6 +2,7 @@
     margin: 80px 0px 110px 0px;
     display: flex;
     justify-content: center;
+    position: relative;
 }
 .hashtags{
     padding: 7px 12px;
@@ -17,7 +18,7 @@
 .fullpage{
     max-width: 676px;
 }
-.fullpage img{
+.article_img{
     max-width: 676px;
 }
 .fullpage_container{
@@ -26,6 +27,8 @@
 .all_articles{
     font-family: 'IBM Plex Sans', sans-serif;
     font-size: 1rem;
+    position: sticky;
+    top: 119px;
     padding: 14px 30px;
     margin-right: 73px;
     cursor: pointer;
