--- a/src/components/FullArticlePages/FullArticlePage.module.css
+++ b/src/components/FullArticlePages/FullArticlePage.module.css
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: center;
     position: relative;
+    flex: 1 1 auto;
 }
 .hashtags{
     padding: 7px 12px;
