--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -5,7 +5,6 @@
     cursor: pointer;
     background: black;
     color: white;
-    border: none;
     margin-left: 38px;
     border: #000000 1px solid;
 }
@@ -16,7 +15,6 @@
     cursor: pointer;
     background: #ffffff;
     color: #000000;
-    border: none;
     border: #000000 1px solid;
 }
 .header_logIn:disabled{
@@ -26,7 +24,6 @@
     cursor: pointer;
     background: #ffffff;
     color: rgba(0, 0, 0, 0.5);
-    border: none;
     border: rgba(0, 0, 0, 0.5) 1px solid;
 }
 .header_signIn{
@@ -36,7 +33,6 @@
     cursor: pointer;
     background: black;
     color: white;
-    border: none;
     margin-left: 24px;
     border: #000000 1px solid;
 }
@@ -47,7 +43,6 @@
     cursor: pointer;
     background: black;
     color: white;
-    border: none;
     border: #ffffff 1px solid;
     margin-left: 38px;
 }
@@ -58,7 +53,6 @@
     cursor: pointer;
     background: black;
     color: white;
-    border: none;
     border: #ffffff 1px solid;
 }
 .footer_logIn{
@@ -68,7 +62,6 @@
     cursor: pointer;
     background: black;
     color: white;
-    border: none;
     margin-left: 24px;
     border: #000000 1px solid;
 }
@@ -80,4 +73,14 @@
     border: none;
     font-family: 'IBM Plex Sans', sans-serif;
     margin: 20px 0px;
+}
+.profile_save_changes{
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-size: 1rem;
+    padding: 14px 30px;
+    cursor: pointer;
+    background: black;
+    color: white;
+    border: #000000 1px solid;
+    max-width: 164px;
 }
