--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -3,11 +3,14 @@
     flex-direction: column;
     position: relative;
     margin-bottom: 32px;
+    width: 100%;
 }
 .input{
     padding: 11px 10px;
     font-size: 1rem;
     font-weight: bold;
+    margin-right: 10px;
+    width: 100%;
 }
 .input::placeholder{
     color: rgba(0, 0, 0, 0.22);
