--- a/src/components/ProfilePage/ProfilePage.module.css
+++ b/src/components/ProfilePage/ProfilePage.module.css
@@ -31,6 +31,11 @@
     font-weight: 400;
     margin: 24px;
     text-decoration: underline;
+    border: none;
+    background: white;
+    cursor: pointer;
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-size: 1rem;
 }
 .header{
     font-size: 3.5rem;
