--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -1,7 +1,7 @@
 .main_container{
     margin: 80px 0px;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     flex-direction: column;
 }
 .main_content{
