--- a/src/components/LogInMenu/LogInMenu.module.css
+++ b/src/components/LogInMenu/LogInMenu.module.css
@@ -15,3 +15,13 @@
     color: #8C8C8C;
     cursor: pointer;
 }
+.active{
+    border-bottom: 1px solid black;
+    position: relative;
+    top: 6px;
+    display: inline-block;
+    margin: 0px 20px;
+    padding-bottom: 10px;
+    color: #000000;
+    cursor: pointer;
+}
