--- a/src/components/FullArticlePages/FullArticlePage.module.css
+++ b/src/components/FullArticlePages/FullArticlePage.module.css
@@ -30,6 +30,7 @@
     font-size: 1rem;
     position: sticky;
     top: 119px;
+    max-height: 50px;
     padding: 14px 30px;
     margin-right: 73px;
     cursor: pointer;
