--- a/src/components/MyArticle/MyArticle.module.css
+++ b/src/components/MyArticle/MyArticle.module.css
@@ -1,9 +1,10 @@
 .articles{
-    max-width: 1070px;
+    max-width: 664px;
     display: flex;
-    margin: 40px 0px;
+    flex-direction: column;
     cursor: pointer;
     filter: invert(4%);
+    margin-bottom: 40px;
 }
 .articles:hover{
     filter: invert(0%);
@@ -13,12 +14,13 @@
     top: -2px;
 }
 .img_article{
-    max-width: 367px;
+    max-width: 664px;
+    max-height: 395px;
     object-fit: cover;
 }
 .article_block{
-    margin-left: 24px;
     border-bottom: 1px #EBEBEB solid;
+    margin: 10px 0px;
 }
 .hashtags{
     padding: 7px 12px;
@@ -29,8 +31,8 @@
     font-size: 0.75rem;
     list-style: none;
     display: inline-block;
-
     margin-right: 10px;
+    margin-top: 10px;
 }
 .article_info{
     display: flex;
@@ -38,7 +40,7 @@
     color: #8C8C8C;
     font-family: 'IBM Plex Sans', sans-serif;
     padding: 0px;
-    margin: 8px 0px;
+    margin: 8px 0px 17px 0px;
 }
 .avatar_block{
     display: flex;
@@ -55,6 +57,7 @@
     max-width: 20px;
 }
 .ml8{
+
     margin-left: 8px;
 }
 .avatars{
@@ -62,7 +65,7 @@
     max-width: 40px;
     object-fit: cover;
 }
-.paragraph_short{
+.short{
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 3;
