--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -86,3 +86,15 @@
     margin-top: 24px;
     margin-bottom: 14px;
 }
+.profile_save_changes:disabled{
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-size: 1rem;
+    padding: 14px 30px;
+    cursor: pointer;
+    background: rgba(255, 255, 255, 0.49);
+    color: rgba(0, 0, 0, 0.51);
+    border: rgba(0, 0, 0, 0.5) 1px solid;
+    max-width: 186px;
+    margin-top: 24px;
+    margin-bottom: 14px;
+}
