--- a/src/components/MyArticles/MyArticles.module.css
+++ b/src/components/MyArticles/MyArticles.module.css
@@ -14,6 +14,9 @@
     margin-right: 40px;
 }
 .avatar{
+    max-width: 126px;
+    object-fit: cover;
+    min-height: 126px;
     min-width: 126px;
     border-radius: 140px;
 }
