--- a/src/components/Paggination/Paggination.module.css
+++ b/src/components/Paggination/Paggination.module.css
@@ -1,6 +1,12 @@
-.paggination{
+.allArticles{
     display: flex;
     justify-content: space-between;
     margin: 36px 0px;
     min-width: 1070px;
+}
+.myArticles {
+    display: flex;
+    justify-content: space-between;
+    margin: 36px 0px;
+    min-width: 670px;
 }
