--- a/src/components/ProfilePage/ProfilePage.module.css
+++ b/src/components/ProfilePage/ProfilePage.module.css
@@ -17,7 +17,9 @@
     margin-right: 40px;
 }
 .avatar{
+    max-height: 126px;
     min-width: 126px;
+    min-height: 126px;
     max-width: 126px;
     border-radius: 145px;
     margin-bottom: 32px;
