Working backend and frontend

--- a/client/src/components/MyArticles/MyArticles.module.css
+++ b/client/src/components/MyArticles/MyArticles.module.css
@@ -29,6 +29,7 @@
     max-width: 664px;
 }
 .p{
+    word-wrap: break-word;
     text-align: center;
     font-size: 0.85rem;
     max-width: 259px;
