Working backend and frontend

--- a/client/src/components/MyArticles/MyArticles.module.css
+++ b/client/src/components/MyArticles/MyArticles.module.css
@@ -22,8 +22,9 @@
 }
 .main_block{
     max-width: 1070px;
+    min-width: 1070px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
 }
 .articles_list{
     max-width: 664px;
