--- a/client/src/components/AddArticle/AddArticle.module.css
+++ b/client/src/components/AddArticle/AddArticle.module.css
@@ -1,22 +1,26 @@
-.container{
+.container {
     display: flex;
     justify-content: center;
 }
-.wrapper{
+
+.wrapper {
     max-width: 1070px;
-    margin: 80px 0px 150px 0px;
+    margin: 80px 0 150px 0;
 }
-.header{
+
+.header {
     font-size: 3.5rem;
-    margin: 0px 0px 30px 0px;
+    margin: 0 0 30px 0;
 }
-.add_image_block{
+
+.add_image_block {
     height: 500px;
     border: 1px solid #e8e6e6;
-    margin: 45px 0px;
+    margin: 45px 0;
     display: flex;
 }
-.image_block{
+
+.image_block {
     border: 1px #e7e7e7 solid;
     max-width: 700px;
     min-width: 700px;
@@ -24,21 +28,24 @@
     /*object-fit: cover;*/
     background: #f8f8f8;
 }
-.img{
+
+.img {
     max-width: 700px;
     min-width: 700px;
     max-height: 500px;
     object-fit: cover;
     /*border-right: 3px solid #c7c5c5;*/
 }
-.img_filtered{
+
+.img_filtered {
     max-width: 700px;
     min-width: 700px;
     max-height: 500px;
     object-fit: cover;
     filter: invert(87%);
 }
-.add_img_buttons{
+
+.add_img_buttons {
     /*border: 1px solid black;*/
     min-width: 370px;
     display: flex;
@@ -46,7 +53,8 @@
     flex-direction: column;
     align-items: center;
 }
-.upload_input{
+
+.upload_input {
     margin-bottom: 17px;
     min-height: 48px;
     min-width: 161px;
@@ -57,13 +65,15 @@
     color: white;
     background: black;
 }
-.input_file_hidden{
+
+.input_file_hidden {
     visibility: hidden;
     position: absolute;
     min-height: 48px;
     max-width: 161px;
 }
-.input_label{
+
+.input_label {
     cursor: pointer;
     padding: 12px 30px;
     margin: 0;
