--- a/client/src/components/Footer/Footer.module.css
+++ b/client/src/components/Footer/Footer.module.css
@@ -1,4 +1,4 @@
-.footer_container{
+.footer_container {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -9,19 +9,22 @@
     bottom: 0;
     left: 0;
 }
-.footer_nav{
+
+.footer_nav {
     min-width: 1070px;
     display: flex;
     justify-content: space-between;
-    padding: 72px 0px;
+    padding: 72px 0;
     border-bottom: 1px rgba(255, 255, 255, 0.35) solid;
 }
-.logo{
+
+.logo {
     max-width: 268px;
     max-height: 32px;
     object-fit: cover;
 }
-.logIn_footer{
+
+.logIn_footer {
     font-family: 'IBM Plex Sans', sans-serif;
     padding: 14px 32px;
     font-size: 1rem;
@@ -31,12 +34,13 @@
     border: 1px white solid;
     margin-left: 24px;
 }
-.rights{
+
+.rights {
     min-width: 1070px;
     color: white;
     display: flex;
     justify-content: space-between;
-    padding: 24px 0px;
+    padding: 24px 0;
     font-family: 'Inter', sans-serif;
     color: rgba(255, 255, 255, 0.50);
 }
