--- a/client/src/components/FullArticlePages/FullArticlePage.module.css
+++ b/client/src/components/FullArticlePages/FullArticlePage.module.css
@@ -1,5 +1,5 @@
 .main_container{
-    margin: 80px 0px 110px 0px;
+    margin: 80px 0 110px 0;
     display: flex;
     justify-content: center;
     position: relative;
@@ -16,46 +16,33 @@
     display: inline-block;
     margin-right: 10px;
 }
-.fullpage{
+.fullPage{
     max-width: 676px;
 }
 .article_img{
     max-width: 676px;
+    min-width: 676px;
+    max-height: 399px;
 }
-.fullpage_container{
+.fullPage_container{
     min-width: 865px;
 }
-.all_articles{
-    font-family: 'IBM Plex Sans', sans-serif;
-    font-size: 1rem;
-    position: sticky;
-    top: 119px;
-    max-height: 50px;
-    padding: 14px 30px;
-    margin-right: 73px;
-    cursor: pointer;
-    background: #ffffff;
-    color: #000000;
-    border: none;
-    border: #000000 1px solid;
-}
-.paragraph_fullpage{
-    margin: 32px 0px;
+.paragraph_fullPage{
+    margin: 32px 0;
 }
 .descriptionImg{
     font-style: italic;
     color: #8C8C8C;
-    margin: 24px 0px;
+    margin: 24px 0;
 }
 .article_info{
     font-size: 0.85rem;
     display: flex;
     align-items: center;
-    max-width: 500px;
     color: #8C8C8C;
     font-family: 'IBM Plex Sans', sans-serif;
-    padding: 20px 0px;
-    margin: 8px 0px;
+    padding: 20px 0;
+    margin: 8px 0;
     max-width: 676px;
 }
 .avatar_block{
@@ -64,7 +51,7 @@
 }
 .avatar_name{
     font-weight: 500;
-    margin: 0px 8px;
+    margin: 0 8px;
 }
 .avatars{
     border-radius: 50%;
@@ -72,7 +59,7 @@
     object-fit: cover;
 }
 .m8{
-    margin: 0px 8px;
+    margin: 0 8px;
 }
 .views{
     max-width: 20px;
@@ -87,13 +74,4 @@
     justify-content: space-between;
     border-bottom: 1px #d7d2d2 solid;
 }
-.first_hashtag{
-    font-family: 'IBM Plex Sans', sans-serif;
-    font-size: 1rem;
-    padding: 14px 30px;
-    cursor: pointer;
-    background: #ffffff;
-    color: #000000;
-    border: none;
-    border: #000000 1px solid;
-}
+
