--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -2,7 +2,7 @@
     background: white;
     top: 0;
     width: 100%;
-    padding: 24px 0px;
+    padding: 24px 0;
     display: flex;
     justify-content: center;
     align-items: center;
