--- a/client/src/components/LogInMenu/LogInMenu.module.css
+++ b/client/src/components/LogInMenu/LogInMenu.module.css
@@ -10,7 +10,7 @@
     position: relative;
     top: 6px;
     display: inline-block;
-    margin: 0px 20px;
+    margin: 0 20px;
     padding-bottom: 10px;
     color: #8C8C8C;
     cursor: pointer;
@@ -20,7 +20,7 @@
     position: relative;
     top: 6px;
     display: inline-block;
-    margin: 0px 20px;
+    margin: 0 20px;
     padding-bottom: 10px;
     color: #000000;
     cursor: pointer;
