--- a/client/src/components/LogInPage/LogInPage.module.css
+++ b/client/src/components/LogInPage/LogInPage.module.css
@@ -3,7 +3,7 @@
     justify-content: center;
 }
 .block{
-    margin: 64px 0px;
+    margin: 64px 0;
     min-width: 396px;
     display: flex;
     flex-direction: column;
