--- a/client/src/components/Main/Main.module.css
+++ b/client/src/components/Main/Main.module.css
@@ -1,5 +1,5 @@
 .main_container{
-    margin: 80px 0px;
+    margin: 80px 0;
     display: flex;
     align-items: flex-start;
     flex-direction: column;
