--- a/client/src/components/ProfilePage/ProfilePage.module.css
+++ b/client/src/components/ProfilePage/ProfilePage.module.css
@@ -1,5 +1,5 @@
 .block{
-    margin: 80px 0px;
+    margin: 80px 0;
     min-width: 1070px;
 }
 .content_block{
@@ -41,7 +41,7 @@
 }
 .header{
     font-size: 3.5rem;
-    margin:0px 0px 64px 0px;
+    margin:0 0 64px 0;
 }
 .user_data_block{
     display: flex;
