--- a/client/src/components/TopArticle/TopArticle.module.css
+++ b/client/src/components/TopArticle/TopArticle.module.css
@@ -13,6 +13,7 @@
 .top_article_block{
     margin-left: 24px;
     border-bottom: 1px #EBEBEB solid;
+    position: relative;
 }
 .hashtags{
     padding: 7px 12px;
@@ -32,6 +33,10 @@
     font-family: 'IBM Plex Sans', sans-serif;
     padding: 0;
     margin: 8px 0;
+    position: absolute;
+    bottom: 10px;
+    min-width: 382px;
+    /*z-index: 10000;*/
 }
 .avatar_block{
     display: flex;
@@ -41,7 +46,10 @@
     font-weight: 500;
     margin: 0 8px;
 }
-.m8{
+.time{
+    margin: 0 10px;
+}
+.views_block{
     margin: 0 8px;
 }
 .views{
