Refactoring frontend....backup before working backend

--- a/client/src/components/FullArticlePages/FullArticlePage.module.css
+++ b/client/src/components/FullArticlePages/FullArticlePage.module.css
@@ -4,6 +4,7 @@
     justify-content: center;
     position: relative;
     flex: 1 1 auto;
+    word-wrap: break-word;
 }
 .hashtags{
     padding: 7px 12px;
