--- a/client/src/components/Main/Articles/Article.module.css
+++ b/client/src/components/Main/Articles/Article.module.css
@@ -20,6 +20,7 @@
     object-fit: cover;
 }
 .article_block{
+    min-width: 680px;
     margin-left: 24px;
     border-bottom: 1px #EBEBEB solid;
 }
