--- a/client/src/components/TopArticle/TopArticle.module.css
+++ b/client/src/components/TopArticle/TopArticle.module.css
@@ -1,7 +1,9 @@
 .top_article{
     max-width: 1070px;
+    min-width: 1070px;
     display: flex;
     cursor: pointer;
+    word-wrap: break-word;
 }
 .img_article{
     max-width: 582px;
@@ -14,6 +16,7 @@
     margin-left: 24px;
     border-bottom: 1px #EBEBEB solid;
     position: relative;
+    min-width: 470px;
 }
 .hashtags{
     padding: 7px 12px;
@@ -35,7 +38,7 @@
     margin: 8px 0;
     position: absolute;
     bottom: 10px;
-    min-width: 382px;
+    min-width: 450px;
     /*z-index: 10000;*/
 }
 .avatar_block{
@@ -47,12 +50,17 @@
     margin: 0 8px;
 }
 .time{
+    min-width: 130px;
     margin: 0 10px;
 }
 .views_block{
+    justify-content: center;
+    align-items: center;
+    display: flex;
     margin: 0 8px;
 }
 .views{
+    max-height: 15px;
     max-width: 20px;
 }
 .avatars{
