--- a/client/src/components/LogInMenu/LogInMenu.module.scss
+++ b/client/src/components/LogInMenu/LogInMenu.module.scss
@@ -14,6 +14,15 @@
     padding-bottom: 10px;
     color: #8C8C8C;
     cursor: pointer;
+    @media (min-width: 1024px) and (max-width: 1439px){
+
+    }
+    @media (min-width: 768px) and (max-width: 1023px){
+        margin: 10px;
+    }
+    @media (min-width: 425px) and (max-width: 767px){
+        margin: 7px;
+    }
 }
 .active{
     border-bottom: 1px solid black;
@@ -24,4 +33,10 @@
     padding-bottom: 10px;
     color: #000000;
     cursor: pointer;
+    @media (min-width: 768px) and (max-width: 1023px){
+        margin: 10px;
+    }
+    @media (min-width: 425px) and (max-width: 767px){
+        margin: 7px;
+    }
 }
