--- a/client/src/components/Main/Articles/Article.module.scss
+++ b/client/src/components/Main/Articles/Article.module.scss
@@ -5,6 +5,15 @@
     cursor: pointer;
     filter: invert(4%);
     word-wrap: break-word;
+    @media (min-width: 1024px) and (max-width: 1439px){
+        max-width: 960px;
+    }
+    @media (min-width: 768px) and (max-width: 1023px){
+        max-width: 740px;
+    }
+    @media (min-width: 425px) and (max-width: 767px){
+        max-width: 580px;
+    }
 }
 .articles:hover{
     filter: invert(0%);
@@ -14,15 +23,37 @@
     top: -2px;
 }
 .img_article{
-    min-width: 367px;
-    max-width: 367px;
-    max-height: 260px;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
+.img_block{
+    display: flex;
+    flex: 1;
+    max-width: 367px;
+    max-height: 260px;
+    min-height: 260px;
+    @media (min-width: 1024px) and (max-width: 1439px){
+        max-height: 230px;
+        min-height: 230px;
+    }
+}
 .article_block{
-    min-width: 680px;
+    max-width: 680px;
     margin-left: 24px;
     border-bottom: 1px #EBEBEB solid;
+    @media (min-width: 1024px) and (max-width: 1439px){
+        max-width: 960px;
+        display: flex;
+        flex: 2;
+        flex-direction: column;
+    }
+    @media (min-width: 768px) and (max-width: 1023px){
+        max-width: 740px;
+    }
+    @media (min-width: 425px) and (max-width: 767px){
+        max-width: 580px;
+    }
 }
 .hashtags{
     padding: 7px 12px;
@@ -74,4 +105,7 @@
     -webkit-line-clamp: 3;
     overflow: hidden;
     max-width: 680px;
+    @media (min-width: 768px) and (max-width: 1023px){
+        max-width: 540px;
+    }
 }
