--- a/client/src/components/TopArticle/TopArticle.module.scss
+++ b/client/src/components/TopArticle/TopArticle.module.scss
@@ -4,13 +4,33 @@
     display: flex;
     cursor: pointer;
     word-wrap: break-word;
+    @media (min-width: 1024px) and (max-width: 1439px){
+        max-width: 960px;
+        min-width: 960px;
+    }
+    @media (min-width: 768px) and (max-width: 1023px){
+        max-width: 740px;
+        min-width: 740px;
+    }
+    @media (min-width: 425px) and (max-width: 767px){
+        max-width: 580px;
+    }
 }
 .img_article{
     max-width: 582px;
     max-height: 397px;
     object-fit: cover;
-    min-width: 582px;
-    min-height: 397px;
+    width: 100%;
+    height: 100%;
+    @media (min-width: 1024px) and (max-width: 1439px){
+        max-width: 500px;
+    }
+    @media (min-width: 768px) and (max-width: 1023px){
+        max-width: 440px;
+    }
+    @media (min-width: 425px) and (max-width: 767px){
+        min-width: 580px;
+    }
 }
 .top_article_block{
     margin-left: 24px;
