--- a/client/src/components/Footer/Footer.module.scss
+++ b/client/src/components/Footer/Footer.module.scss
@@ -1,49 +1,90 @@
 .footer_container {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  background: black;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  @media (min-width: 0px) and (max-width: 1439px) {
+    padding: 0 20px;
+  }
+
+  .footer_nav {
     width: 100%;
-    background: black;
+    max-width: 1070px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 72px 0;
+    border-bottom: 1px rgba(255, 255, 255, 0.35) solid;
+    @media (min-width: 601px) and (max-width: 850px) {
+      padding: 45px 0;
+    }
+    @media (min-width: 401px) and (max-width: 600px) {
+      padding: 45px 0;
+    }
+    @media (min-width: 0) and (max-width: 400px) {
+      padding: 25px 0;
+    }
+    .burger_icon{
+      width: 50px;
+      height: 50px;
+      background: white;
+      border-radius: 50%;
+      border: 2px solid #524949;
+      padding: 5px;
+      @media (min-width: 0) and (max-width: 400px){
+        width: 40px;
+        height: 40px;
+        background: white;
+        border-radius: 50%;
+        border: 1px solid #524949;
+        padding: 3px;
+      }
+    }
+  }
+
+  .logo_container {
+    display: flex;
     align-items: center;
     justify-content: center;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    @media (min-width: 624px) and (max-width: 1439px){
-        padding: 0 20px;
-    }
-    .footer_nav {
-        width: 100%;
-        max-width: 1070px;
-        display: flex;
-        justify-content: space-between;
-        padding: 72px 0;
-        border-bottom: 1px rgba(255, 255, 255, 0.35) solid;
 
-        .logo {
-            max-width: 268px;
-            max-height: 32px;
-            object-fit: cover;
-        }
+    .logo {
+      max-width: 268px;
+      max-height: 32px;
+      object-fit: cover;
+      @media (min-width: 0) and (max-width: 400px){
+        max-width: 220px;
+        max-height: 24px;
+      }
+    }
+  }
 
+  .rights {
+    max-width: 1070px;
+    width: 100%;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    padding: 24px 0;
+    font-family: 'Inter', sans-serif;
+    color: rgba(255, 255, 255, 0.50);
+    @media (min-width: 501px) and (max-width: 1439px) {
+      font-size: 0.7rem;
     }
-    .rights {
-        max-width: 1070px;
-        width: 100%;
-        color: white;
-        display: flex;
-        justify-content: space-between;
-        padding: 24px 0;
-        font-family: 'Inter', sans-serif;
-        color: rgba(255, 255, 255, 0.50);
-        @media (min-width: 1024px) and (max-width: 1439px){
-            min-width: 960px;
-        }
-        @media (min-width: 768px) and (max-width: 1023px){
-            min-width: 790px;
-        }
-        @media (min-width: 425px) and (max-width: 767px){
-            min-width: 580px;
-        }
+    @media (min-width: 401px) and (max-width: 500px) {
+      font-size: 0.5rem;
     }
+    @media (min-width: 0px) and (max-width: 400px) {
+      font-size: 0.4rem;
+    }
+  }
 }
+
+
+
+
 
