--- a/client/src/components/ProfilePage/ProfilePage.module.scss
+++ b/client/src/components/ProfilePage/ProfilePage.module.scss
@@ -1,26 +1,44 @@
 .block{
     margin: 80px 0;
-    min-width: 1070px;
+    max-width: 1070px;
 }
 .content_block{
-    min-height: 382px;
+    max-height: 382px;
     display: flex;
 }
+.photo_block_container{
+    max-height: 382px;
+    max-width: 366px;
+    padding: 65px 102px;
+    width: 100%;
+    height: 100%;
+    background-color: #f5f1f1;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    margin-right: 40px;
+    place-items: center;
+    @media (min-width: 0) and (max-width: 1080px){
+        padding: 25px 50px;
+    }
+}
 .photo_block{
-    min-height: 382px;
-    min-width: 366px;
+    width: 100%;
+    height: 100%;
     align-items: center;
     justify-content: center;
     display: flex;
     flex-direction: column;
-    background-color: #FBFBFB;
-    margin-right: 40px;
+    overflow: auto;
 }
 .avatar{
-    max-height: 126px;
-    min-width: 126px;
-    min-height: 126px;
-    max-width: 126px;
+    height: 126px;
+    width: 126px;
+    flex: 1;
+    @media (min-width: 0) and (max-width: 1080px){
+        width: 100px;
+        height: 100px;
+    }
     border-radius: 145px;
     margin-bottom: 32px;
 }
@@ -34,7 +52,7 @@
     margin: 24px;
     text-decoration: underline;
     border: none;
-    background: white;
+    background-color: #f5f1f1;
     cursor: pointer;
     font-family: 'IBM Plex Sans', sans-serif;
     font-size: 1rem;
@@ -49,7 +67,9 @@
 }
 .description{
     font-family: 'IBM Plex Sans', sans-serif;
-    min-height: 155px;
+    max-height: 155px;
+    height: 100%;
+    max-width: 664px;
     margin-bottom: 24px;
     padding: 11px 10px;
     font-size: 1rem;
