--- a/client/src/components/ProfilePage/ProfilePage.module.scss
+++ b/client/src/components/ProfilePage/ProfilePage.module.scss
@@ -1,30 +1,58 @@
 .block{
     margin: 80px 0;
     max-width: 1070px;
+    @media (min-width: 851px) and (max-width: 1080px){
+        margin: 70px 20px;
+        max-width: 900px;
+    }
+    @media (min-width: 0px) and (max-width: 850px){
+        margin: 60px 20px;
+        max-width: 800px;
+    }
 }
 .content_block{
     max-height: 382px;
     display: flex;
 }
 .photo_block_container{
-    max-height: 382px;
-    max-width: 366px;
-    padding: 65px 102px;
-    width: 100%;
-    height: 100%;
+    min-height: 382px;
+    min-width: 366px;
     background-color: #f5f1f1;
-    display: grid;
+    display: flex;
     justify-content: center;
     align-items: center;
     margin-right: 40px;
     place-items: center;
-    @media (min-width: 0) and (max-width: 1080px){
-        padding: 25px 50px;
+    @media (min-width: 851px) and (max-width: 1080px){
+        min-height: 300px;
+        min-width: 280px;
+    }
+    @media (min-width: 741px) and (max-width: 850px){
+        min-height: 280px;
+        min-width: 260px;
+    }
+    @media (min-width: 586px) and (max-width: 740px){
+        min-height: 250px;
+        min-width: 220px;
+        margin-right: 20px;
+    }
+    @media (min-width: 351px) and (max-width: 585px){
+        max-height: 120px;
+        min-height: 120px;
+        min-width: 120px;
+        margin-right: 10px;
+    }
+    @media (min-width: 0px) and (max-width: 350px){
+        max-height: 120px;
+        min-height: 120px;
+        min-width: 100px;
+        margin-right: 5px;
     }
 }
 .photo_block{
-    width: 100%;
-    height: 100%;
+
+    //width: 100%;
+    //height: 100%;
     align-items: center;
     justify-content: center;
     display: flex;
@@ -34,16 +62,26 @@
 .avatar{
     height: 126px;
     width: 126px;
-    flex: 1;
-    @media (min-width: 0) and (max-width: 1080px){
+    @media (min-width: 851px) and (max-width: 1080px){
         width: 100px;
         height: 100px;
+        margin-bottom: 20px;
+    }
+    @media (min-width: 586px) and (max-width: 850px){
+        width: 80px;
+        height: 80px;
+        margin-bottom: 12px;
+    }
+    @media (min-width: 0px) and (max-width: 585px){
+        width: 45px;
+        height: 45px;
+        margin-bottom: 6px;
     }
     border-radius: 145px;
     margin-bottom: 32px;
 }
 .user_info{
-    min-width: 664px;
+    max-width: 664px;
     display: flex;
     flex-direction: column;
 }
@@ -56,16 +94,40 @@
     cursor: pointer;
     font-family: 'IBM Plex Sans', sans-serif;
     font-size: 1rem;
+    @media (min-width: 586px) and (max-width: 1080px){
+        margin: 18px;
+        font-size: 0.8rem;
+    }
+    @media (min-width: 0px) and (max-width: 585px){
+        margin: 7px;
+        font-size: 0.5rem;
+    }
 }
 .header{
     font-size: 3.5rem;
     margin:0 0 64px 0;
+    @media (min-width: 851px) and (max-width: 1080px){
+        font-size: 3rem;
+        margin:0 0 35px 0;
+    }
+    @media (min-width: 586px) and (max-width: 850px){
+        font-size: 2.5rem;
+        margin:0 0 25px 0;
+    }
+    @media (min-width: 0px) and (max-width: 585px){
+        font-size: 1.5rem;
+        margin:0 0 10px 0;
+    }
 }
 .user_data_block{
     display: flex;
     gap: 32px;
+    @media (min-width: 0px) and (max-width: 585px){
+        gap: 12px;
+    }
 }
 .description{
+    border: 1px black solid;
     font-family: 'IBM Plex Sans', sans-serif;
     max-height: 155px;
     height: 100%;
@@ -75,7 +137,27 @@
     font-size: 1rem;
     line-height: 1rem;
     font-weight: 400;
+    @media (min-width: 586px) and (max-width: 1080px){
+        max-width: 531px;
+        margin-bottom: 0;
+        font-size: 0.8rem;
+        padding: 5px 5px;
+    }
+    @media (min-width: 0px) and (max-width: 585px){
+        max-width: 531px;
+        margin-bottom: 0;
+        font-size: 0.5rem;
+        padding: 0 1px;
+    }
 }
+.description_label{
+    @media (min-width: 0px) and (max-width: 585px){
+        margin-bottom: 2px;
+        font-size: 0.6rem;
+
+    }
+}
+
 .upload_input{
     margin: 0;
     min-height: 48px;
@@ -84,18 +166,44 @@
     justify-content: center;
     align-items: center;
     border: black 1px solid;
+    @media (min-width: 586px) and (max-width: 1080px){
+        min-height: 38px;
+        min-width: 121px;
+    }
+    @media (min-width: 0px) and (max-width: 585px){
+        min-height: 12px;
+        min-width: 42px;
+    }
+
 }
 .input_file_hidden{
     visibility: hidden;
     position: absolute;
     min-height: 48px;
     max-width: 161px;
+    @media (min-width: 586px) and (max-width: 1080px){
+        min-height: 38px;
+        max-width: 131px;
+    }
+    @media (min-width: 0px) and (max-width: 585px){
+        min-height: 18px;
+        min-width: 82px;
+    }
 }
 .input_label{
     cursor: pointer;
     padding: 12px 30px;
     margin: 0;
     font-size: 1rem;
+    @media (min-width: 586px) and (max-width: 1080px){
+        padding: 9px 24px;
+        font-size: 0.8rem;
+    }
+    @media (min-width: 0px) and (max-width: 585px){
+        padding: 2px 7px;
+        font-size: 0.5rem;
+    }
+
 }
 .lds_dual_ring {
     display: inline-block;
