--- a/client/src/components/Main/Main.module.scss
+++ b/client/src/components/Main/Main.module.scss
@@ -1,18 +1,12 @@
 .main_container{
-    margin: 80px 0;
+    margin: 5vw 0;
     display: flex;
     align-items: flex-start;
     flex-direction: column;
 }
 .main_content{
-    max-width: 1070px;
-    @media (min-width: 1024px) and (max-width: 1439px){
-        max-width: 960px;
-    }
-    @media (min-width: 768px) and (max-width: 1023px){
-        max-width: 840px;
-    }
-    @media (min-width: 425px) and (max-width: 767px){
-        max-width: 680px;
+    max-width: 90vw;
+    @media (min-width: 0px) and (max-width: 1000px){
+        padding: 0 20px;
     }
 }
