--- a/client/src/components/Pagination/Pagination.module.scss
+++ b/client/src/components/Pagination/Pagination.module.scss
@@ -2,16 +2,8 @@
     display: flex;
     justify-content: space-between;
     margin: 36px 0;
-    min-width: 1070px;
-    @media (min-width: 1024px) and (max-width: 1439px){
-        min-width: 960px;
-    }
-    @media (min-width: 768px) and (max-width: 1023px){
-        min-width: 740px;
-    }
-    @media (min-width: 425px) and (max-width: 767px){
-        min-width: 580px;
-    }
+    width: 83vw;
+
 }
 .myArticles {
     display: flex;
