--- a/client/src/components/Button/Button.module.scss
+++ b/client/src/components/Button/Button.module.scss
@@ -1,221 +1,247 @@
-.header_logout{
-    font-family: 'IBM Plex Sans', sans-serif;
-    font-size: 1rem;
-    padding: 14px 30px;
-    cursor: pointer;
-    background: black;
-    color: white;
-    margin-left: 38px;
-    border: #000000 1px solid;
-    @media (min-width: 0px) and (max-width: 1000px){
-        margin-left: 10px;
-    }
+.header_logout {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 1rem;
+  padding: 14px 30px;
+  cursor: pointer;
+  background: black;
+  color: white;
+  margin-left: 38px;
+  border: #000000 1px solid;
+  @media (min-width: 0px) and (max-width: 1000px) {
+    margin-left: 10px;
+  }
 }
-.header_logout:active{
-    font-family: 'IBM Plex Sans', sans-serif;
-    font-size: 1rem;
-    padding: 14px 30px;
-    cursor: pointer;
-    background: #ffffff;
-    color: #000000;
-    margin-left: 38px;
-    border: #030000 1px solid;
-    @media (min-width: 0px) and (max-width: 1000px){
-        margin-left: 10px;
-    }
+
+.header_logout:active {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 1rem;
+  padding: 14px 30px;
+  cursor: pointer;
+  background: #ffffff;
+  color: #000000;
+  margin-left: 38px;
+  border: #030000 1px solid;
+  @media (min-width: 0px) and (max-width: 1000px) {
+    margin-left: 10px;
+  }
 }
-.header_logIn{
-    font-family: 'IBM Plex Sans', sans-serif;
-    font-size: 1rem;
-    padding: 14px 33px;
-    cursor: pointer;
-    background: #ffffff;
-    color: #000000;
-    border: #000000 1px solid;
+
+.header_logIn {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 1rem;
+  padding: 14px 33px;
+  cursor: pointer;
+  background: #ffffff;
+  color: #000000;
+  border: #000000 1px solid;
 }
-.header_logIn:active{
-    font-family: 'IBM Plex Sans', sans-serif;
-    font-size: 1rem;
-    padding: 14px 33px;
-    cursor: pointer;
-    background: #000000;
-    color: #ffffff;
-    border: #000000 1px solid;
+
+.header_logIn:active {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 1rem;
+  padding: 14px 33px;
+  cursor: pointer;
+  background: #000000;
+  color: #ffffff;
+  border: #000000 1px solid;
 }
-.header_logIn:disabled{
-    font-family: 'IBM Plex Sans', sans-serif;
-    font-size: 1rem;
-    padding: 14px 30px;
-    background: #ffffff;
-    cursor: inherit;
-    color: rgba(0, 0, 0, 0.5);
-    border: rgba(0, 0, 0, 0.5) 1px solid;
+
+.header_logIn:disabled {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 1rem;
+  padding: 14px 30px;
+  background: #ffffff;
+  cursor: inherit;
+  color: rgba(0, 0, 0, 0.5);
+  border: rgba(0, 0, 0, 0.5) 1px solid;
 }
-.header_signIn{
-    font-family: 'IBM Plex Sans', sans-serif;
-    font-size: 1rem;
-    padding: 14px 30px;
-    cursor: pointer;
-    background: black;
-    color: white;
-    margin-left: 24px;
-    border: #000000 1px solid;
+
+.header_signIn {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 1rem;
+  padding: 14px 30px;
+  cursor: pointer;
+  background: black;
+  color: white;
+  margin-left: 24px;
+  border: #000000 1px solid;
 }
-.header_signIn:active{
-    font-family: 'IBM Plex Sans', sans-serif;
-    font-size: 1rem;
-    padding: 14px 30px;
-    cursor: pointer;
-    background: #ffffff;
-    color: #000000;
-    margin-left: 24px;
-    border: #000000 1px solid;
+
+.header_signIn:active {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 1rem;
+  padding: 14px 30px;
+  cursor: pointer;
+  background: #ffffff;
+  color: #000000;
+  margin-left: 24px;
+  border: #000000 1px solid;
 }
-.footer_logout{
-    font-family: 'IBM Plex Sans', sans-serif;
-    font-size: 1rem;
-    padding: 14px 30px;
-    cursor: pointer;
-    background: black;
-    color: white;
-    border: #ffffff 1px solid;
-    margin-left: 38px;
-    @media (min-width: 0px) and (max-width: 1000px){
-        margin-left: 10px;
-    }
+
+.footer_logout {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 1rem;
+  padding: 14px 30px;
+  cursor: pointer;
+  background: black;
+  color: white;
+  border: #ffffff 1px solid;
+  margin-left: 38px;
+  @media (min-width: 0px) and (max-width: 1000px) {
+    margin-left: 10px;
+  }
 }
-.footer_signIn{
-    font-family: 'IBM Plex Sans', sans-serif;
-    font-size: 1rem;
-    padding: 14px 30px;
-    cursor: pointer;
-    background: black;
-    color: white;
-    border: #ffffff 1px solid;
+
+.footer_signIn {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 1rem;
+  padding: 14px 30px;
+  cursor: pointer;
+  background: black;
+  color: white;
+  border: #ffffff 1px solid;
 }
-.footer_logIn{
-    font-family: 'IBM Plex Sans', sans-serif;
-    font-size: 1rem;
-    padding: 14px 30px;
-    cursor: pointer;
-    background: black;
-    color: white;
-    margin-left: 24px;
-    border: #000000 1px solid;
+
+.footer_logIn {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 1rem;
+  padding: 14px 30px;
+  cursor: pointer;
+  background: black;
+  color: white;
+  margin-left: 24px;
+  border: #000000 1px solid;
 }
-.form_button{
-    font-size: 1rem;
-    background: black;
-    color: white;
-    padding: 18px 0;
-    border: none;
-    font-family: 'IBM Plex Sans', sans-serif;
-    margin: 20px 0;
-    cursor: pointer;
+
+.form_button {
+  font-size: 1rem;
+  background: black;
+  color: white;
+  padding: 18px 0;
+  border: none;
+  font-family: 'IBM Plex Sans', sans-serif;
+  margin: 20px 0;
+  cursor: pointer;
+  @media (min-width: 0) and (max-width: 850px){
+    padding: 4vw 10vw;
+    width: 80vw;
+    font-size: 6vw;
+    margin: 10vw 0;
+  }
 }
-.profile_save_changes{
-    font-family: 'IBM Plex Sans', sans-serif;
-    font-size: 1rem;
-    padding: 14px 30px;
-    @media (min-width: 851px) and (max-width: 1080px){
-        font-size: 0.9rem;
-        padding: 10px 0;
-        max-width: 160px;
-        margin-bottom: 0;
-    }
-    @media (min-width: 586px) and (max-width: 850px){
-        font-size: 0.8rem;
-        padding: 10px 0;
-        max-width: 140px;
-        margin-bottom: 0;
-        margin-top: 10px;
-    }
-    @media (min-width: 0px) and (max-width: 585px){
-        font-size: 0.5rem;
-        padding: 5px 0;
-        max-width: 60px;
-        margin-bottom: 0;
-        margin-top: 5px;
-    }
-    cursor: pointer;
-    background: black;
-    color: white;
-    border: #000000 1px solid;
-    max-width: 186px;
-    margin-top: 24px;
-    margin-bottom: 14px;
+
+.profile_save_changes {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 1rem;
+  padding: 14px 30px;
+  @media (min-width: 851px) and (max-width: 1080px) {
+    font-size: 0.9rem;
+    padding: 10px 0;
+    max-width: 160px;
+    margin-bottom: 0;
+  }
+  @media (min-width: 586px) and (max-width: 850px) {
+    font-size: 0.8rem;
+    padding: 10px 0;
+    max-width: 140px;
+    margin-bottom: 0;
+    margin-top: 10px;
+  }
+  @media (min-width: 0px) and (max-width: 585px) {
+    font-size: 0.5rem;
+    padding: 5px 0;
+    max-width: 60px;
+    margin-bottom: 0;
+    margin-top: 5px;
+  }
+  cursor: pointer;
+  background: black;
+  color: white;
+  border: #000000 1px solid;
+  max-width: 186px;
+  margin-top: 24px;
+  margin-bottom: 14px;
 }
-.profile_save_changes:active{
-    font-family: 'IBM Plex Sans', sans-serif;
-    font-size: 1rem;
-    padding: 14px 30px;
-    cursor: pointer;
-    background: #ffffff;
-    color: #000000;
-    border: #000000 1px solid;
-    max-width: 186px;
-    margin-top: 24px;
-    margin-bottom: 14px;
-    @media (min-width: 851px) and (max-width: 1081px){
-        font-size: 0.9rem;
-        padding: 10px 0;
-        max-width: 160px;
-        margin-bottom: 0;
-    }
-    @media (min-width: 586px) and (max-width: 850px){
-        font-size: 0.8rem;
-        padding: 10px 0;
-        max-width: 140px;
-        margin-bottom: 0;
-        margin-top: 10px;
-    }
-    @media (min-width: 0px) and (max-width: 585px){
-        font-size: 0.5rem;
-        padding: 10px 0;
-        max-width: 80px;
-        margin-bottom: 0;
-        margin-top: 5px;
-    }
+
+.profile_save_changes:active {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 1rem;
+  padding: 14px 30px;
+  cursor: pointer;
+  background: #ffffff;
+  color: #000000;
+  border: #000000 1px solid;
+  max-width: 186px;
+  margin-top: 24px;
+  margin-bottom: 14px;
+  @media (min-width: 851px) and (max-width: 1081px) {
+    font-size: 0.9rem;
+    padding: 10px 0;
+    max-width: 160px;
+    margin-bottom: 0;
+  }
+  @media (min-width: 586px) and (max-width: 850px) {
+    font-size: 0.8rem;
+    padding: 10px 0;
+    max-width: 140px;
+    margin-bottom: 0;
+    margin-top: 10px;
+  }
+  @media (min-width: 0px) and (max-width: 585px) {
+    font-size: 0.5rem;
+    padding: 10px 0;
+    max-width: 80px;
+    margin-bottom: 0;
+    margin-top: 5px;
+  }
 }
-.profile_save_changes:disabled{
-    font-family: 'IBM Plex Sans', sans-serif;
-    font-size: 1rem;
-    padding: 14px 30px;
-    cursor: pointer;
-    background: rgba(255, 255, 255, 0.49);
-    color: rgba(0, 0, 0, 0.51);
-    border: rgba(0, 0, 0, 0.5) 1px solid;
-    max-width: 186px;
-    margin-top: 24px;
-    margin-bottom: 14px;
+
+.profile_save_changes:disabled {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 1rem;
+  padding: 14px 30px;
+  cursor: pointer;
+  background: rgba(255, 255, 255, 0.49);
+  color: rgba(0, 0, 0, 0.51);
+  border: rgba(0, 0, 0, 0.5) 1px solid;
+  max-width: 186px;
+  margin-top: 24px;
+  margin-bottom: 14px;
 }
-.all_articles{
-    font-family: 'IBM Plex Sans', sans-serif;
-    font-size: 1rem;
-    position: sticky;
-    top: 119px;
-    max-height: 50px;
-    padding: 14px 30px;
-    margin-right: 73px;
-    cursor: pointer;
-    background: #ffffff;
-    color: #000000;
-    border: #000000 1px solid;
+
+.all_articles {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 1rem;
+  position: sticky;
+  top: 119px;
+  max-height: 50px;
+  padding: 14px 30px;
+  margin-right: 73px;
+  cursor: pointer;
+  background: #ffffff;
+  color: #000000;
+  border: #000000 1px solid;
 }
-.category{
-    font-family: 'IBM Plex Sans', sans-serif;
-    font-size: 1rem;
-    padding: 14px 30px;
-    background: #ffffff;
-    color: rgba(0, 0, 0, 0.51);
-    border: rgba(0, 0, 0, 0.27) 1px solid;
+
+.category {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 1rem;
+  padding: 14px 30px;
+  background: #ffffff;
+  color: rgba(0, 0, 0, 0.51);
+  border: rgba(0, 0, 0, 0.27) 1px solid;
+
 }
-.burger_menu_logout{
-    font-family: 'IBM Plex Sans', sans-serif;
-    margin-top: 5vh;
-    font-size: 2rem;
-    color: #ffffff;
-    padding: 30px 70px;
-    background: #030000;
-    border: 1px #b2a9a9 solid;
+
+.burger_menu_logout {
+  font-family: 'IBM Plex Sans', sans-serif;
+  margin-top: 5vh;
+  font-size: 2rem;
+  color: #ffffff;
+  padding: 3vw 7vw;
+  background: #030000;
+  border: 1px #b2a9a9 solid;
+  @media (min-width: 0px) and (max-width: 850px) {
+    width: 40vw;
+  }
 }
