--- a/client/src/components/Footer/Footer.module.scss
+++ b/client/src/components/Footer/Footer.module.scss
@@ -56,9 +56,8 @@
       max-width: 268px;
       max-height: 32px;
       object-fit: cover;
-      @media (min-width: 0) and (max-width: 400px){
-        max-width: 220px;
-        max-height: 24px;
+      @media (min-width: 0) and (max-width: 850px){
+        width: 60vw;
       }
     }
   }
