--- a/client/src/components/Header/Header.module.scss
+++ b/client/src/components/Header/Header.module.scss
@@ -11,6 +11,7 @@
     z-index: 10;
     @media (min-width: 0px) and (max-width: 850px) {
         padding: 4vw 0;
+        height: 12vh;
     }
     .app_header {
         display: flex;
@@ -21,15 +22,22 @@
         position: sticky;
         background: white;
         z-index: 10;
+        @media (min-width: 0px) and (max-width: 850px) {
+            max-width: 92vw;
+            height: 7vh;
+        }
         .burger_icon{
             width: 4vw;
             cursor: pointer;
+            @media (min-width: 0px) and (max-width: 850px) {
+                width: 10vw;
+            }
         }
         .logo {
             width: 20vw;
             object-fit: cover;
-            @media (min-width: 0px) and (max-width: 875px) {
-                width: 30vw;
+            @media (min-width: 0px) and (max-width: 850px) {
+                width: 60vw;
             }
         }
     }
