--- a/client/src/components/Main/Articles/Article.module.scss
+++ b/client/src/components/Main/Articles/Article.module.scss
@@ -1,141 +1,188 @@
-.articles{
-    max-width: 83vw;
-    display: flex;
-    margin: 2vw 0;
-    cursor: pointer;
-    filter: invert(4%);
-    word-wrap: break-word;
-    @media (min-width: 0px) and (max-width: 850px) {
-        flex-direction: column;
-        margin: 7vw 0 0 0;
-    }
+.articles {
+  max-width: 94vw;
+  display: flex;
+  margin: 2vw 0;
+  cursor: pointer;
+  filter: invert(4%);
+  word-wrap: break-word;
+  @media (min-width: 0px) and (max-width: 850px) {
+    flex-direction: column;
+    margin: 7vw 0 0 0;
+  }
 }
-.articles:hover{
-    filter: invert(0%);
+
+.articles:hover {
+  filter: invert(0%);
 }
-.articles:active{
+
+.articles:active {
+  position: relative;
+  top: -2px;
+}
+
+.img_article {
+  height: 16vw;
+  object-fit: cover;
+  width: 25vw;
+  @media (min-width: 0px) and (max-width: 850px) {
+    width: 94vw;
+    height: 60vw;
+  }
+}
+
+.img_block {
+  display: flex;
+  width: 25vw;
+  @media (min-width: 0px) and (max-width: 850px) {
+    width: 94vw;
+    height: 60vw;
+    margin-top: 3vw;
+  }
+  //@media (min-width: 1024px) and (max-width: 1439px){
+  //    max-height: 230px;
+  //    min-height: 230px;
+  //}
+}
+
+.article_block {
+  max-width: 70vw;
+  margin-left: 2.5vw;
+  border-bottom: 1px #EBEBEB solid;
+  @media (min-width: 0px) and (max-width: 450px) {
+    margin-top: 4vw;
+    margin-left: 0;
+    min-width: 93vw;
+    height: 117vw;
+  }
+  @media (min-width: 451px) and (max-width: 850px) {
+    margin-top: 4vw;
+    margin-left: 0;
+    min-width: 93vw;
+    height: 97vw;
+  }
+}
+
+.hashtags {
+  padding: 0.4vw 0.6vw;
+  background: #F7F7F7;
+  color: #b4b3b3;
+  border-radius: 45px;
+  font-family: 'Inter', sans-serif;
+  font-size: 0.9vw;
+  list-style: none;
+  display: inline-block;
+  margin-right: 10px;
+  @media (min-width: 0) and (max-width: 850px) {
+    font-size: 5vw;
+    padding: 0.5vw 3vw 0.5vw 2vw;
+  }
+}
+
+.article_info {
+  display: flex;
+  align-items: center;
+  color: #8C8C8C;
+  font-family: 'IBM Plex Sans', sans-serif;
+  padding: 0;
+  margin: 8px 0;
+  position: absolute;
+  bottom: -0.1vw;
+  @media (min-width: 0px) and (max-width: 850px) {
     position: relative;
-    top: -2px;
+    margin-bottom: 20px;
+    flex-direction: column;
+    align-items: baseline;
+    gap: 3vw;
+  }
 }
-.img_article{
-    height: 16vw;
-    object-fit: cover;
-    width: 25vw;
-    @media (min-width: 0px) and (max-width: 850px) {
-        width: 83vw;
-        height: 50vw;
-    }
+
+.avatar_block {
+  display: flex;
+  align-items: center;
+  @media (min-width: 0px) and (max-width: 850px) {
+  }
+
 }
-.img_block{
-    display: flex;
-    width: 25vw;
-    @media (min-width: 0px) and (max-width: 850px) {
-        width: 83vw;
-        height: 50vw;
-        margin-top: 3vw;
-    }
-    //@media (min-width: 1024px) and (max-width: 1439px){
-    //    max-height: 230px;
-    //    min-height: 230px;
-    //}
+
+.avatar_name {
+  font-size: 1.2vw;
+  font-weight: 500;
+  margin: 0 8px;
+  @media (min-width: 0px) and (max-width: 850px) {
+    font-size: 5vw;
+    margin: 0 3vw;
+  }
 }
-.article_block{
-    max-width: 70vw;
-    margin-left: 2.5vw;
-    border-bottom: 1px #EBEBEB solid;
-    @media (min-width: 0px) and (max-width: 850px) {
-        margin-top: 2vw;
-        margin-left: 0;
-        min-width: 83vw;
-        max-height: 45vw;
-    }
+
+.m8 {
+  margin: 0 8px;
 }
-.hashtags{
-    padding: 0.4vw 0.6vw;
-    background: #F7F7F7;
-    color: #8C8C8C;
-    border-radius: 45px;
-    font-family: 'Inter', sans-serif;
-    font-size: 0.9vw;
-    list-style: none;
-    display: inline-block;
-    margin-right: 10px;
-    @media (min-width: 0) and (max-width: 850px) {
-        font-size: 2vw;
-        padding: 1vw 3vw;
-    }
+
+.views {
+  width: 1.7vw;
+  @media (min-width: 0px) and (max-width: 850px) {
+    width: 5vw;
+  }
 }
-.article_info{
-    display: flex;
-    align-items: center;
-    color: #8C8C8C;
-    font-family: 'IBM Plex Sans', sans-serif;
-    padding: 0;
-    margin: 8px 0;
-    position: absolute;
-    bottom: -0.1vw;
-    @media (min-width: 0px) and (max-width: 850px)  {
-        position: relative;
-        margin-bottom: 20px;
-    }
+
+.ml8 {
+  margin-left: 8px;
+  @media (min-width: 0px) and (max-width: 850px) {
+    font-size: 5vw;
+  }
 }
-.avatar_block{
-    display: flex;
-    align-items: center;
+
+.date {
+  margin: 0 8px;
+  font-size: 1.2vw;
+  @media (min-width: 0px) and (max-width: 850px) {
+    font-size: 5vw;
+    margin: 0;
+  }
 }
-.avatar_name{
-    font-size: 1.2vw;
-    font-weight: 500;
-    margin: 0 8px;
-    @media (min-width: 0px) and (max-width: 875px) {
-        font-size: 3vw;
-    }
+
+.avatars {
+  border-radius: 50%;
+  width: 3.2vw;
+  object-fit: cover;
+  @media (min-width: 0px) and (max-width: 850px) {
+    width: 11vw;
+  }
 }
-.m8{
-    margin: 0 8px;
-}
-.views{
-    width: 1.7vw;
-    @media (min-width: 0px) and (max-width: 875px) {
-        width: 3vw;
-    }
-}
-.ml8{
-    margin-left: 8px;
-    @media (min-width: 0px) and (max-width: 875px) {
-        font-size: 2.5vw;
-    }
-}
-.date{
-    margin: 0 8px;
-    font-size: 1.2vw;
-    @media (min-width: 0px) and (max-width: 875px) {
-        font-size: 2.5vw;
-    }
-}
-.avatars{
-    border-radius: 50%;
-    width: 3.2vw;
-    object-fit: cover;
-    @media (min-width: 0px) and (max-width: 875px) {
-        width: 7vw;
-    }
-}
-.paragraph_short{
-    display: -webkit-box;
+
+.paragraph_short {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  overflow: hidden;
+  max-width: 70vw;
+  font-size: 1.1vw;
+  @media (min-width: 0px) and (max-width: 450px) {
+    min-width: 93vw;
+    font-size: 4vw;
+    -webkit-line-clamp: 10;
     -webkit-box-orient: vertical;
-    -webkit-line-clamp: 3;
     overflow: hidden;
-    max-width: 70vw;
-    font-size: 1.1vw;
-    @media (min-width: 0px) and (max-width: 850px) {
-        min-width: 83vw;
-        font-size: 3vw;
-        -webkit-line-clamp: 4;
-    }
+  }
+  @media (min-width: 451px) and (max-width: 850px) {
+    min-width: 93vw;
+    font-size: 4vw;
+    -webkit-line-clamp: 10;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
 }
-.views_block{
+
+.views_block {
+  display: flex;
+  align-items: center;
+  margin-left: 0.4vw;
+}
+
+.mobile_stat {
+  @media (min-width: 0px) and (max-width: 850px) {
     display: flex;
-    align-items: center;
-    margin-left: 0.4vw;
+    width: 93vw;
+    justify-content: space-between;
+  }
 }
