--- a/client/src/components/Button/Button.module.scss
+++ b/client/src/components/Button/Button.module.scss
@@ -134,31 +134,15 @@
   font-family: 'IBM Plex Sans', sans-serif;
   font-size: 1rem;
   padding: 14px 30px;
-  @media (min-width: 851px) and (max-width: 1080px) {
-    font-size: 0.9rem;
-    padding: 10px 0;
-    max-width: 160px;
-    margin-bottom: 0;
-  }
-  @media (min-width: 586px) and (max-width: 850px) {
-    font-size: 0.8rem;
-    padding: 10px 0;
-    max-width: 140px;
-    margin-bottom: 0;
-    margin-top: 10px;
-  }
-  @media (min-width: 0px) and (max-width: 585px) {
-    font-size: 0.5rem;
-    padding: 5px 0;
-    max-width: 60px;
-    margin-bottom: 0;
-    margin-top: 5px;
+  @media (min-width: 0px) and (max-width: 850px) {
+    font-size: 4vw;
+    padding: 4vw 4vw;
   }
   cursor: pointer;
   background: black;
   color: white;
   border: #000000 1px solid;
-  max-width: 186px;
+
   margin-top: 24px;
   margin-bottom: 14px;
 }
@@ -171,28 +155,11 @@
   background: #ffffff;
   color: #000000;
   border: #000000 1px solid;
-  max-width: 186px;
   margin-top: 24px;
   margin-bottom: 14px;
-  @media (min-width: 851px) and (max-width: 1081px) {
-    font-size: 0.9rem;
-    padding: 10px 0;
-    max-width: 160px;
-    margin-bottom: 0;
-  }
-  @media (min-width: 586px) and (max-width: 850px) {
-    font-size: 0.8rem;
-    padding: 10px 0;
-    max-width: 140px;
-    margin-bottom: 0;
-    margin-top: 10px;
-  }
-  @media (min-width: 0px) and (max-width: 585px) {
-    font-size: 0.5rem;
-    padding: 10px 0;
-    max-width: 80px;
-    margin-bottom: 0;
-    margin-top: 5px;
+  @media (min-width: 0px) and (max-width: 850px) {
+    font-size: 4vw;
+    padding: 4vw 4vw;
   }
 }
 
