--- a/client/src/components/Main/Articles/Article.module.scss
+++ b/client/src/components/Main/Articles/Article.module.scss
@@ -52,13 +52,13 @@
     margin-top: 4vw;
     margin-left: 0;
     min-width: 93vw;
-    height: 117vw;
+    max-height: 117vw;
   }
   @media (min-width: 451px) and (max-width: 850px) {
     margin-top: 4vw;
     margin-left: 0;
     min-width: 93vw;
-    height: 97vw;
+    max-height: 97vw;
   }
 }
 
@@ -89,10 +89,10 @@
   bottom: -0.1vw;
   @media (min-width: 0px) and (max-width: 850px) {
     position: relative;
-    margin-bottom: 20px;
+    margin-bottom: 0;
     flex-direction: column;
     align-items: baseline;
-    gap: 3vw;
+    gap: 1vw;
   }
 }
 
@@ -157,6 +157,7 @@
   overflow: hidden;
   max-width: 70vw;
   font-size: 1.1vw;
+  word-break: break-all;
   @media (min-width: 0px) and (max-width: 450px) {
     min-width: 93vw;
     font-size: 4vw;
