--- a/client/src/components/SignInPage/SignInPage.module.scss
+++ b/client/src/components/SignInPage/SignInPage.module.scss
@@ -8,8 +8,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    @media (min-width: 0) and (max-width: 600px){
-        margin: 0 40px;
+    align-items: center;
+    @media (min-width: 0) and (max-width: 850px){
+        margin: 10vw 0;
+        max-width: 100vw;
     }
 }
 .header{
