--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -23,7 +23,7 @@ label{
 .App{
   position: relative;
   min-height: 100vh;
-  padding-bottom: 230px;
+  padding-bottom: 50vw  ;
   display: flex;
   flex-direction: column;
   align-items: center;
